gave pics a class name

--- a/website/index.html
+++ b/website/index.html
@@ -17,37 +17,9 @@
 <!---a welcome to my page --->
 
 <!---navigation bar --->
-<style>
-div.content {
-    margin-left: 25%;
-    padding: 1px 16px;
-    height: 1000px;
-}
-
-@media screen and (max-width: 900px) {
-    ul.sidenav {
-        width: 100%;
-        height: auto;
-        position: relative;
-    }
-    ul.sidenav li a {
-        float: left;
-        padding: 15px;
-    }
-    div.content {margin-left: 0;}
-}
-
-@media screen and (max-width: 400px) {
-    ul.sidenav li a {
-        text-align: center;
-        float: none;
-    }
-}
-</style>
-
 
 <div class="container">
-<nav class="navbar navbar-dark bg-dark">
+<nav class="navbar navbar-dark bg-black">
   <a class="navbar-brand" href="#"></a>
 
 	<ul class="nav nav-pills" id="pills">
@@ -82,7 +54,7 @@ div.content {
         Let me show you why...
 
 				<!---Rotating pics of my children--->
-	<div class="container">
+	<div class="children">
   <h3>My Reasons Why</h3>
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
@@ -95,17 +67,17 @@ div.content {
     <!-- Wrapper for slides -->
     <div class="carousel-inner">
       <div class="item active">
-				<img src="pics/Liyah.jpg" alt="Ahzaliyah" style="max-width:75%; height:400px;">
+				<img src="pics/Liyah.jpg" class="Liyah" alt="Ahzaliyah chillin" style="max-width:75%; height:400px;">
 				<p>Gifted to me during a time in my life when I needed a reason to live</p>
       </div>
 
       <div class="item">
-        <img src="pics/John.jpg" alt="John" style="max-width:75%; height:400px;">
+        <img src="pics/John.jpg" class="John" alt="John in a half suit" style="max-width:75%; height:400px;">
 				<p>My favorite little man was an unexpected turn of events</p>
       </div>
 
       <div class="item">
-        <img src="pics/Adira.jpg" alt="Adira" style="max-width:75%; height:400px;">
+        <img src="pics/Adira.jpg" class="Adira" alt="Adira smiling" style="max-width:75%; height:400px;">
 				<p>Finding out about this beauty was One of those blank stare moments</p>
       </div>
     </div>
@@ -122,18 +94,17 @@ div.content {
   </div>
 </div>
 
-<h6>figure out how to place padding between the carousel and the collasing cards</h6>
 <!---use this as an alert
 			<p>I hope as you peruse my page, there will be something that catches your attention
 				and causes you to want to utilize my services or extend a hand.
 			 </p>
     </div>
   </div> --->
-
+<h5></h5>
 <!--trying to give page life with collapsing cards from BootstrapDocs--->
 	<div class="panel-group" id="accordion">
 	  <div class="panel panel-default">
-	    <div class="panel-heading">
+	    <div class="panel-heading" name="collapseOne">
 	      <h4 class="panel-title">
 	        <a data-toggle="collapse" data-parent="#accordion" href="default.js">
 	          Web Developer - New Endeavor
@@ -151,7 +122,7 @@ div.content {
 	    </div>
 	  </div>
 	  <div class="panel panel-default">
-	    <div class="panel-heading">
+	    <div class="panel-heading" name="collapseTwo">
 	      <h4 class="panel-title">
 	        <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
 	          Financial Planning Help
@@ -168,7 +139,7 @@ div.content {
 	    </div>
 	  </div>
 	  <div class="panel panel-default">
-	    <div class="panel-heading">
+	    <div class="panel-heading" name="collapseThree">
 	      <h4 class="panel-title">
 	        <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
 	         Organizer/Event Planner
@@ -186,7 +157,7 @@ div.content {
 	    </div>
 	  </div>
 		<div class="panel panel-default">
-	    <div class="panel-heading">
+	    <div class="panel-heading" name="collapseFour">
 	      <h4 class="panel-title">
 	        <a data-toggle="collapse" data-parent="#accordion" href="#collapseFour">
 	          Postpartum Assist
@@ -203,7 +174,7 @@ div.content {
 	    </div>
 	  </div>
 		<div class="panel panel-default">
-	    <div class="panel-heading">
+	    <div class="panel-heading" name="collapseFive">
 	      <h4 class="panel-title">
 	        <a data-toggle="collapse" data-parent="#accordion" href="#collapseFive">
 	          Writer (1st book to come this fall of 2018)
@@ -298,9 +269,12 @@ to that action needing php, a backend utility, I will leave this as a note
 
 
 <footer>
+	<address>
   <p>Posted by: Shenikia Thomas</p>
-  <p>Contact information:<a href="mailto:shenikiar@gmail.com"></p>
-
+	<p>Email: <a href="mailto:shenikiar@gmail.com">shenikiar@gmail.com</a></p>
+<p>Facebook: <a href="mailto:https://www.facebook.com/shenikiat">https://www.facebook.com/shenikiat</a></p>
+<p>LinkedIn: <a href="mailto:www.linkedin.com/in/shenikia-thomas-423825a5">www.linkedin.com/in/shenikia-thomas-423825a5</a></p>
+</address>
 </footer>
 
 </html>
