--- a/website/index.html
+++ b/website/index.html
@@ -9,7 +9,7 @@
  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
- <script src=""jquery-3.2.1.min.js"></script>
+ <script src="jquery-3.2.1.min.js"></script>
 
  <link rel="stylesheet" type="text/css" href="default.css">
 
@@ -26,7 +26,7 @@
 	<li class="active"><a href="#">Home</a></li>
 	<li><a href="#collapseOne">Web Developer</a></li>
 	<li><a href="#collapseTwo">Financial Planning Help</a></li>
-	<li><a href="#collapseThree">Organizer/Event Planner</a></li>
+	<li><a href="#collapseThree">Organizer and Event Planner</a></li>
 	<li><a href="#collapseFour">Postpartum Assist</a></li>
 	<li><a href="#collapseFive">Writer</a></li>
 	</ul>
@@ -67,18 +67,18 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner">
       <div class="item active">
-				<img src="pics/Liyah.jpg" class="Liyah" alt="Ahzaliyah chillin" style="max-width:75%; height:400px;">
-				<p>Gifted to me during a time in my life when I needed a reason to live</p>
+				<img src="pics/Liyah.jpg" class="Liyah" alt="Ahzaliyah chillin" style="max-width:75%; height:300px;">
+				<span>Gifted to me during a time in my life when I needed a reason to live</span>
       </div>
 
       <div class="item">
-        <img src="pics/John.jpg" class="John" alt="John in a half suit" style="max-width:75%; height:400px;">
-				<p>My favorite little man was an unexpected turn of events</p>
+        <img src="pics/John.jpg" class="John" alt="John in a half suit" style="max-width:60%; height:300px;">
+				<span>My favorite little man was an unexpected turn of events</span>
       </div>
 
       <div class="item">
-        <img src="pics/Adira.jpg" class="Adira" alt="Adira smiling" style="max-width:75%; height:400px;">
-				<p>Finding out about this beauty was One of those blank stare moments</p>
+        <img src="pics/Adira.jpg" class="Adira" alt="Adira smiling" style="max-width:60%; height:300px;">
+				<span>Finding out about this beauty was One of those blank stare moments</span>
       </div>
     </div>
 
@@ -103,10 +103,10 @@
 <h5></h5>
 <!--trying to give page life with collapsing cards from BootstrapDocs--->
 	<div class="panel-group" id="accordion">
-	  <div class="panel panel-default">
-	    <div class="panel-heading" name="collapseOne">
+	  <div class="panel panel-default" name="collapseOne">
+	    <div class="panel-heading">
 	      <h4 class="panel-title">
-	        <a data-toggle="collapse" data-parent="#accordion" href="default.js">
+	        <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
 	          Web Developer - New Endeavor
 	        </a>
 	      </h4>
@@ -121,8 +121,8 @@
 	      </div>
 	    </div>
 	  </div>
-	  <div class="panel panel-default">
-	    <div class="panel-heading" name="collapseTwo">
+	  <div class="panel panel-default"  name="collapseTwo">
+	    <div class="panel-heading">
 	      <h4 class="panel-title">
 	        <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
 	          Financial Planning Help
@@ -138,11 +138,11 @@
 	      </div>
 	    </div>
 	  </div>
-	  <div class="panel panel-default">
-	    <div class="panel-heading" name="collapseThree">
+	  <div class="panel panel-default" name="collapseThree">
+	    <div class="panel-heading">
 	      <h4 class="panel-title">
 	        <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
-	         Organizer/Event Planner
+	         Organizer-Event Planner
 	        </a>
 	      </h4>
 	    </div>
@@ -156,8 +156,8 @@
 	      </div>
 	    </div>
 	  </div>
-		<div class="panel panel-default">
-	    <div class="panel-heading" name="collapseFour">
+		<div class="panel panel-default" name="collapseFour">
+	    <div class="panel-heading">
 	      <h4 class="panel-title">
 	        <a data-toggle="collapse" data-parent="#accordion" href="#collapseFour">
 	          Postpartum Assist
@@ -173,8 +173,8 @@
 	      </div>
 	    </div>
 	  </div>
-		<div class="panel panel-default">
-	    <div class="panel-heading" name="collapseFive">
+		<div class="panel panel-default"  name="collapseFive">
+	    <div class="panel-heading">
 	      <h4 class="panel-title">
 	        <a data-toggle="collapse" data-parent="#accordion" href="#collapseFive">
 	          Writer (1st book to come this fall of 2018)
