--- a/website/index.html
+++ b/website/index.html
@@ -33,7 +33,7 @@
 <script src="jquery-3.2.1.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="default.js"></script>
+<script type="text/javascript" src="script.js"></script>
 
 </head>
 
