--- a/website/index.html
+++ b/website/index.html
@@ -20,7 +20,7 @@
   <a class="navbar-brand" href="#"></a>
 
 	<ul class="nav nav-pills" id="pills">
-	<li class="active"><a href="#">Home</a></li>
+	<li class="active"></li>
 	<li><a href="#collapseOne">Web Developer</a></li>
 	<li><a href="#collapseTwo">Financial Planning Help</a></li>
 	<li><a href="#collapseThree">Organizer and Event Planner</a></li>
@@ -29,11 +29,6 @@
 	</ul>
 </nav>
 </div>
-
-<script src="jquery-3.2.1.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="script.js"></script>
 
 </head>
 
@@ -270,6 +265,10 @@ for code louisville project <form class="" action="index.html" method="post">
 
 
 
+ <script src="jquery-3.2.1.min.js"></script>
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+ <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+ <script type="text/javascript" src="script.js"></script>
 
 
 
@@ -280,8 +279,8 @@ for code louisville project <form class="" action="index.html" method="post">
 	<address>
   <p>Posted by: Shenikia Thomas</p>
 	<p>Email: <a href="mailto:shenikiar@gmail.com">shenikiar@gmail.com</a></p>
-<p>Facebook: <a href="mailto:https://www.facebook.com/shenikiat">https://www.facebook.com/shenikiat</a></p>
-<p>LinkedIn: <a href="mailto:www.linkedin.com/in/shenikia-thomas-423825a5">www.linkedin.com/in/shenikia-thomas-423825a5</a></p>
+<p>Facebook: <a href="https://www.facebook.com/shenikiat">https://www.facebook.com/shenikiat</a></p>
+<p>LinkedIn: <a href="https://www.linkedin.com/in/shenikia-thomas-423825a5">www.linkedin.com/in/shenikia-thomas-423825a5</a></p>
 </address>
 </footer>
 
