fixed button information

--- a/website/index.html
+++ b/website/index.html
@@ -229,7 +229,7 @@ for code louisville project <form class="" action="index.html" method="post">
 			</fieldset>
 
 <p id="reg">Click the button below to complete registration</p>
-			<button onClick="myFunction">Sign Up</button>
+			<button onclick="myFunction()">Sign Up</button>
 	</form>
 
 				<!--- Will be used for Organizing Events
